fix a few misc elements

--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -280,6 +280,9 @@
     /* Tutorial. */
     ._2NbD3 > div:last-child {
       background-color: var(--darker); }
+    /* Loader. */
+    #startup svg > circle {
+      stroke: var(--lighter) !important; }
 
   /* Disable background. */
   ._2U_Zc:before {
@@ -557,6 +560,9 @@
   /* Hide 'Type a message' once focused. */
   ._3F6QL._2WovP.focused ._39LWd {
     color: transparent; }
+    /* Placeholder text color. */
+    ._39LWd {
+      color: var(--lighter) !important; }
     /* On event smoothness. */
     .pluggable-input.pluggable-input-compose > div:first-child {
       transition: 150ms ease-in-out !important; }
@@ -637,6 +643,9 @@
     .YAPQk ._3j7s9:hover {
       background-color: var(--dark) !important; }
 
+  /* Search messages. */
+  #pane-side ._2EXPL {
+    background-color: transparent !important; }
 
   /* Starred messages. */
   ._2yeJ5 .ZwkQK, .ZwkQK {
