--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -23,6 +23,7 @@
 @var text emojiOpacity "Emoji opacity" 0.75
 @var text customImage "Custom image" url(replace-with-image-address)
 @var text customRules "Custom CSS rules" #test::after { content: "paste all your custom css here!" !important; }
+@var text customFonts "Custom fonts" "'custom-font', 'Segoe UI', 'Helvetica Neue', 'Helvetica', 'Lucida Grande', 'Arial', 'Ubuntu', 'Cantarell', 'Fira Sans',"
 @var text customCompact "Compact mode breakpoint" 720px
 
 @advanced dropdown background "App background" {
@@ -263,6 +264,7 @@
 
   /* Body reset. */
   body {
+    font-family: /*[[customFonts]]*/ sans-serif;
     background: none;
     background-color: var(--dark); }
 
