--- a/WhatsApp.user.css
+++ b/WhatsApp.user.css
@@ -5,7 +5,7 @@
 @homepageURL  https://github.com/vednoc/onyx
 @supportURL   https://github.com/vednoc/onyx/issues
 @updateURL    https://rawgit.com/vednoc/onyx/master/WhatsApp.user.css
-@version      1.4.2
+@version      1.4.3
 @author       vednoc
 @license      MIT
 @preprocessor uso
@@ -257,8 +257,8 @@
     --mblue: /*[[mblue]]*/;
     --image: url(https://media.discordapp.net/attachments/310799529161129984/417408747812552715/zilesanamin.jpg);
     --emojiOpacity: /*[[emojiOpacity]]*/;
-    --version: "WhatsApp by Mew v1.4.2";
-    --message: "Updated on 31st of May. All custom features except compact mode (works but not polished!) work again; more soon! ";
+    --version: "WhatsApp by Mew v1.4.3";
+    --message: "Updated on 3rd of June. Report bugs on GitHub! ";
     --changes: "See the changelog at: https://github.com/vednoc/onyx/releases";
   }
 
